...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login-->
        <scene sceneID="EHf-IW-A2E">
            <objects>
                <viewController storyboardIdentifier="LoginVC" title="Login" id="01J-lp-oVM" customClass="LoginViewController" customModule="OCRDataEntryApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <userGuides>
                            <userLayoutGuide location="16" affinity="minX"/>
                            <userLayoutGuide location="398" affinity="minX"/>
...
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A3r-CX-Qzc">
                                                        <rect key="frame" x="182.66666666666663" y="0.0" width="54" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <state key="normal" title="Sign Up">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="signup" destination="01J-lp-oVM" eventType="touchUpInside" id="CPl-QX-YNu"/>
                                                        </connections>
                                                    </button>
...
                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z1n-2X-HRw">
                                <rect key="frame" x="124" y="561" width="166" height="23"/>
                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Miranda Form">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="test4:" destination="rZM-3g-5SZ" eventType="touchUpInside" id="auo-jp-tdT"/>
                                    <segue destination="9eV-ZQ-1m5" kind="showDetail" identifier="UploadViewSegue" id="39e-pK-YGq"/>
                                </connections>
...
