...
                            <color key="backgroundColor" systemColor="systemBlueColor"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="44" id="gRW-c0-WkU"/>
                            </constraints>
                            <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
                            <state key="normal" title="SignUp">
                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <connections>
                                <action selector="onSignupButtonTap:" destination="-1" eventType="touchUpInside" id="F5Z-dj-amu"/>
                            </connections>
                        </button>
...
